# training-inference-pipelines

./: Deployment and Integration Strategy.md  README.md  docker-compose.yml
taxfix-inference/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
taxfix-inference/src/taxfix_inference/: main.py
taxfix-inference/src/taxfix_inference/model/: loader.py
taxfix-inference/src/taxfix_inference/routers/: predict.py
taxfix-training/: .gitignore  pyproject.toml
taxfix-training/src/taxfix_training/: main.py  utils.py
taxfix-training/src/taxfix_training/data_access_layer/: csv_loader.py
taxfix-training/src/taxfix_training/logdir/: dataset.csv
taxfix-training/src/taxfix_training/model_training/: train.py
taxfix-training/src/taxfix_training/model_validation/: calculate_metrics.py
