[tool.poetry]
name = "taxfix-inference-pipeline"
version = "0.1.0"
description = ""
authors = ["Maciej Blasiak <mblasiak@outlook.com>"]
readme = "README.md"
packages = [{include = "src/taxfix_inference"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
mlflow = "^2.19.0"
scikit-learn = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
addopts = "-p no:cacheprovider -p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
